prodpic-alignment-fixed

--- a/app/assets/stylesheets/prod_description.scss
+++ b/app/assets/stylesheets/prod_description.scss
@@ -14,6 +14,10 @@ span.fa.fa-heart.checked {
  display: block;
   max-width: 100%;  
   height: auto;
+ /* border-style:ridge;
+  border-color:  rgba(0, 0, 0, 0.11);
+  border-top:1px;*/
+  z-index:-1 !important;
 }
 
 .col-prod-img{
@@ -98,5 +102,5 @@ padding:0;
 }
 
 .footer-prod-desc{
-display: inline;
+//display: inline;
 }
